<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/app_name_1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:textSize="24sp"
            android:text="@string/app_name_2"
            android:textStyle="bold"
            android:textColor="@color/amber"
            app:layout_constraintLeft_toRightOf="@id/name"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sub_title"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/amber"
            android:text="@string/tv_menu"
            android:textSize="16sp"
            android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@id/sub"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_persegi"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cv_persegiPanjang"
            app:layout_constraintBottom_toTopOf="@id/cv_jajarGenjang"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_persegi"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/iv_detail_persegi"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_persegi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_persegi"
                    app:layout_constraintTop_toBottomOf="@id/iv_persegi"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_text"/>


                <Button
                    android:id="@+id/btn_persegi"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/amber"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btn_pilih"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_persegi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_persegiPanjang"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_menu"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cv_persegi"
            app:layout_constraintBottom_toTopOf="@id/cv_segitiga"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_persegiPanjang"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/iv_detail_persegi_panjang"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_persegiPanjang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_persegi_panjang"
                    app:layout_constraintTop_toBottomOf="@id/iv_persegiPanjang"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_text"/>


                <Button
                    android:id="@+id/btn_persegi_panjang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/amber"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btn_pilih"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_persegiPanjang"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_jajarGenjang"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cv_segitiga"
            app:layout_constraintBottom_toTopOf="@id/cv_belah_ketupat"
            android:layout_marginEnd="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_jajarGenjang"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/iv_detail_jajargenjang"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_jajarGenjang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_jajar_genjang"
                    app:layout_constraintTop_toBottomOf="@id/iv_jajarGenjang"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_text"/>


                <Button
                    android:id="@+id/btn_jajar_genjang"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/amber"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btn_pilih"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_jajarGenjang"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_segitiga"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/cv_lingkaran"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cv_jajarGenjang"
            android:layout_marginStart="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_segitiga"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/iv_detail_segitiga"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_segitiga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_segitiga"
                    app:layout_constraintTop_toBottomOf="@id/iv_segitiga"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_text"/>


                <Button
                    android:id="@+id/btn_segitiga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/amber"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btn_pilih"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_segitiga"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_belah_ketupat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cv_lingkaran"
            android:layout_marginEnd="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_belah_ketupat"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/iv_detail_belah_ketupat"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_belah_ketupat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_belah_ketupat"
                    app:layout_constraintTop_toBottomOf="@id/iv_belah_ketupat"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_text"/>


                <Button
                    android:id="@+id/btn_belah_ketupat"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/amber"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btn_pilih"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_belah_ketupat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_lingkaran"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cv_belah_ketupat"
            android:layout_marginStart="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_lingkaran"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/iv_detail_lingkaran"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_lingkaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_lingkaran"
                    app:layout_constraintTop_toBottomOf="@id/iv_lingkaran"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_text"/>


                <Button
                    android:id="@+id/btn_lingkaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/amber"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/btn_pilih"
                    android:textSize="12sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_lingkaran"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
