<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JajarGenjangActivity"
    android:padding="28dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/tv_jajar_genjang"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:textSize="24sp"
        android:text="@string/app_name_2"
        android:textStyle="bold"
        android:textColor="@color/amber"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:src="@drawable/iv_detail_jajargenjang"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/linear_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_pilih_perhitungan"
            android:layout_marginBottom="8dp"
            app:startIconDrawable="@drawable/ic_calculate"
            app:startIconTint="@color/amber"
            app:boxStrokeColor="@color/amber"
            android:textColorHint="@color/primary_text">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Masukkan Angka"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_sisi_a_layout"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Sisi a"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/amber"
            app:boxStrokeErrorColor="#B00020"
            android:layout_marginBottom="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sisi_a"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_sisi_b_layout"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Sisi b"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/amber"
            app:boxStrokeErrorColor="#B00020"
            android:layout_marginBottom="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sisi_b"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_tinggi_layout"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tinggi (t)"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/amber"
            app:boxStrokeErrorColor="#B00020"
            android:layout_marginBottom="4dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tinggi"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_hitung"
        app:layout_constraintTop_toBottomOf="@id/linear_lay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:gravity="center"
            android:id="@+id/tv_perhitungan_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Luas Persegi"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/primary_text"
            android:textSize="14sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hasil"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/amber"
            android:textSize="32sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="match_parent"
        android:backgroundTint="@color/amber"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btn_hitung"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>